--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,69 @@
-@import "tailwindcss";
+@import 'tailwindcss';
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
+@theme {
+  /* Colors */
+  --color-red-500: hsl(14, 86%, 42%);
+  --color-rose-900: hsl(14, 65%, 9%);
+  --color-rose-500: hsl(12, 20%, 44%);
+  --color-rose-400: hsl(7, 20%, 60%);
+  --color-rose-300: hsl(14, 25%, 72%);
+  --color-rose-100: hsl(13, 31%, 94%);
+  --color-rose-50: hsl(20, 50%, 98%);
+  --color-green-300: hsl(159, 69%, 38%);
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
+  /* --breakpoint-xs: 23.4375rem; 375px */
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+  /* Max-width */
+  --container-mobile: 20.4375rem; /* 327px */
+  --container-xs: 32rem; /* 512px */
+  --container-sm: 36rem; /* 576px */
+  --container-md: 43rem; /* 688px */
+  --container-lg: 59rem; /* 944px */
+  --container-xl: 76rem; /* 1216px */
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-red-hat-text);
+}
+
+.text-preset-1 {
+  font-size: 2.5rem;
+  line-height: 1.2;
+  letter-spacing: 0;
+  font-weight: 700;
+}
+
+.text-preset-2 {
+  font-size: 1.5rem;
+  line-height: 1.25;
+  letter-spacing: 0;
+  font-weight: 700;
+}
+
+.text-preset-3 {
+  font-size: 1rem;
+  line-height: 1.5;
+  letter-spacing: 0;
+  font-weight: 600;
+}
+
+.text-preset-4 {
+  font-size: 0.875rem;
+  line-height: 1.5;
+  letter-spacing: 0;
+  font-weight: 400;
+}
+
+.text-preset-4-bold {
+  font-size: 0.875rem;
+  line-height: 1.5;
+  letter-spacing: 0;
+  font-weight: 600;
+}
+
+.text-preset-5 {
+  font-size: 1rem;
+  line-height: 1.5;
+  letter-spacing: 0;
+  font-weight: 400;
 }
